# SpiceFit

./: .gitignore  README.md  __init__.py  pyproject.toml  test.fits
SpiceFit/: __init__.py
SpiceFit/.fitting_jacobian_functions/: fitting_jacobian_functions.py  fitting_jacobian_functions_ne_8_770_42_1c_template.py  fitting_jacobian_functions_o_4_787_72_2c_template.py
SpiceFit/TemplatesLines/: c_3_977_96_1c.template.yaml  c_3_977_96_2c.template.yaml  c_3_977_96_2c_p.template.yaml  h_1_1025_72_1c.template.yaml  h_1_972_57_1c.template.yaml  metadata_lines_default.yaml  mg_9_706_02_1c.template.yaml  mg_9_706_02_2c.template.yaml  n_4_765_15_1c.template.yaml  n_4_765_15_2c.template.yaml  ne_8_770_42_1c.template.yaml  ne_8_770_42_2c.template.yaml  ne_8_770_42_3c.template.yaml  o_3_703_87_2c.template.yaml  o_3_703_87_3c.template.yaml  o_4_787_72_2c.template.yaml  o_6_1031_93_1c.template.yaml
SpiceFit/Util/: constants.py  fitting.py  plotting_fits.py  shared_memory.py
SpiceFit/core/: FitLineResults.py  FitResults.py  FitTemplate.py  FitTemplates.py  FittingModel.py  RasterWindow.py  SpiceRaster.py  SpiceRasterWindow.py  __init__.py  fitting_spectra.py
SpiceFit/core/test/: test.fits  test_FitResults.py  test_SpiceRaster.py  test_SpiceRasterWindowL2.py  test_fitmodel.py
SpiceFit/linefit_modules/: linefit_leastsquares.py  linefit_storage.py  plotting_modules.py  skew_correction.py  skew_parameter_search.py  util.py
SpiceFit/test/: numba_test.py  personal_test.py
SpiceFit/ui_interface/: SpectralQuicklook.py
SpiceFit/util/: binning.py  constants.py  plotting_fits.py  shared_memory.py  spice_util.py
(+2 files in other folders)
