[tool.poetry]
name = "SpiceFit"
version = "0.1.1"
description = "Tools to fit lines with SPICE onboard Solar Orbiter"
authors = ["dolliou <dolliou@mps.mpg.de>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = ">=1.26.4"
astropy = ">=6.1.4"
sospice = ">=0.0.8"
pyyaml = ">=6.0.2"
sunpy = "^6.0.4"
matplotlib = ">=3.9.0"
mpl-animators = ">=1.0.0"
reproject = ">=0.9.0"
numba = "^0.61.0"
tqdm = ">=4.66.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
